# openjph-ffi

./: Cargo.toml  README.md  build.rs  generate.sh
src/: ffi.rs  lib.rs  main.rs
tests/: dao.j2c
