[package]
name = "openjph_ffi"
version = "0.1.0"
authors = ["Linh <linhnguyen@zentech.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"
bindgen = "0.53.1"
image = "*"
cc = { version =  "1.0.67", features = ["parallel"] }

[build-dependencies]
cc = { version =  "1.0.67", features = ["parallel"] }
bindgen = "0.53.1"